# geekshacking-mcp

./: .tool-versions  pyproject.toml  tasks.json  test.js  todo-mcp.py  todo_mcp.py
gh_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/todo_mcp/: todo_db.py
